--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,5 @@ file.reference.okio-1.17.5.jar=D:\\SWT\\Vegetable\\LIB\\okio-1.17.5.jar
 file.reference.sqljdbc42.jar=D:\\SWT\\Vegetable\\LIB\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+selected.browser=Chrome
 user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
