--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,12 +26,17 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.byte-buddy-1.10.10.jar=LIB\\byte-buddy-1.10.10.jar
 file.reference.gson-2.3.1.jar=C:\\Users\\xuant\\Downloads\\vnpay_jsp\\vnpay_jsp\\gson-2.3.1.jar
 file.reference.jakarta.activation-2.0.1.jar=LIB\\jakarta.activation-2.0.1.jar
 file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\xuant\\Downloads\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=allowedlib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=allowedlib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\xuant\\Downloads\\jaxb-api-2.1.jar
+file.reference.log4j-1.2.17.jar=LIB\\log4j-1.2.17.jar
+file.reference.mockito-core-5.1.1.jar=LIB\\mockito-core-5.1.1.jar
+file.reference.mockito-inline-5.1.1.jar=LIB\\mockito-inline-5.1.1.jar
+file.reference.objenesis-3.2.jar=LIB\\objenesis-3.2.jar
 file.reference.okhttp-3.0.0-RC1.jar=C:\\Users\\xuant\\Downloads\\okhttp-3.0.0-RC1.jar
 file.reference.okio-1.17.5.jar=C:\\Users\\xuant\\Downloads\\okio-1.17.5.jar
 file.reference.sqljdbc42.jar=C:\\Users\\xuant\\Downloads\\sqljdbc42.jar
@@ -52,7 +57,12 @@ javac.classpath=\
     ${file.reference.jakarta.mail-2.0.1.jar}:\
     ${file.reference.jakarta.activation-2.0.1.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.mockito-inline-5.1.1.jar}:\
+    ${file.reference.mockito-core-5.1.1.jar}:\
+    ${file.reference.objenesis-3.2.jar}:\
+    ${file.reference.byte-buddy-1.10.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -63,7 +73,9 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
